force-app/main/default/objects/Potential_Matching_From_Screener__c/fields/Bookmark__c.field-meta.xml
<CustomField>
    <fullName>Bookmark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fellow indicated that they are interested in this fellowship but may or may not have submitted full Consider Me</description>
    <inlineHelpText>Fellow indicated that they are interested in this fellowship but may or may not have submitted full Consider Me</inlineHelpText>
    <label>Bookmark</label>
    <type>Checkbox</type>
</CustomField>