force-app/main/default/objects/Potential_Matching_From_Screener__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Climate_Corps_Engagement__c</referenceTo>
    <relationshipName>Potential_Matching_From_Screeners</relationshipName>
    <type>Lookup</type>
</CustomField>