force-app/main/default/objects/Potential_Matching_From_Screener__c/fields/Engagement_Available__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Available__c</fullName>
    <formula>CASE(TEXT(Engagement__r.Stage__c),
&apos;Confirmed Participation&apos;, 1,
&apos;Match Conversation Complete&apos;, 1,
&apos;Onboarding Conversation Not Accepted&apos;, 1,
0) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Available?</label>
    <type>Checkbox</type>
</CustomField>