force-app/main/default/objects/Potential_Matching_From_Screener__c/fields/How_Considered__c.field-meta.xml
<CustomField>
    <fullName>How_Considered__c</fullName>
    <label>How Considered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consider Me</fullName>
            </value>
            <value>
                <fullName>EDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>