force-app/main/default/objects/Potential_Matching_From_Screener__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deleting the existing records when end user selects new set of records</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>