force-app/main/default/objects/Potential_Matching_From_Screener__c/fields/Why__c.field-meta.xml
<CustomField>
    <fullName>Why__c</fullName>
    <label>Why</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>